--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 #quarkus.http.test-port=9091
+
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.reactive.url=<postgresql://user:password@host:5432/dbname>
+quarkus.datasource.reactive.max-size=20
+
+quarkus.hibernate-orm.database.generation=drop-and-create
